--- a/templates/mobile/footer.html
+++ b/templates/mobile/footer.html
@@ -18,10 +18,8 @@
     </div>
     <div class="footer-copyright">
       <div class="container">
-      © 2020 Copyright
-      <a class="grey-text text-lighten-4 right" href="#">Sitemap</a>
+      © 2014 Copyright Text
+      <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
       </div>
     </div>
 </footer>
-</body>
-</html>
