--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -14,3 +14,26 @@
         </div>
 </div>
 {%endmacro%}}
+
+{% macro index_card(id,title,categoria,img, link)%}
+    <figure>
+        <img src="{{ img }}" loading="lazy" alt="{{ title }}">
+        <figcaption style="font-size: 20px;color:black;font-weight: bold;"><a href="{{ link }}" style="color: black;">{{title}}</a>{% for cat in categoria %}<span class="new badge" data-badge-caption="{{ cat }}">seccion</span>{% endfor %}</figcaption>
+    </figure>
+{% endmacro%}
+
+{% macro a_card(img,title,gancho,link) %}
+    <div class="card">
+      <div class="card-image waves-effect waves-block waves-light">
+        <img class="activator" src="{{ img }}">
+      </div>
+      <div class="card-content">
+        <span class="card-title activator grey-text text-darken-4">{{ title }}<i class="material-icons right">more_vert</i></span>
+        <p><a href="#">{{ link }}</a></p>
+      </div>
+      <div class="card-reveal">
+        <span class="card-title grey-text text-darken-4">{{ title }}<i class="material-icons right">close</i></span>
+        <p>{{ gancho }}</p>
+      </div>
+    </div>
+{% endmacro %}
