#listo se podria decir que la vista es a un 70 , ahora falta filtrar los datos,como las secciones,el buscador, el sitemap,comprimirmir archivos y crear un integracion para la publicaciion de post y integracion contnua con cuentestero

--- a/app/templates/back.html
+++ b/app/templates/back.html
@@ -5,3 +5,27 @@
 
   <a href="" rel="nofollow"></a>
   <a href="" target="_blank" rel="noopener noreferrer"></a>
+
+
+  /*    {
+    url: 'https://picsum.photos/1080/1920',
+    seeMore: ({ close }) => (
+        <div style={{ width: '100%', height: '100%' }}>Hello</div>
+    ),
+    header: {
+        heading: 'Mohit Karekar',
+        subheading: 'Posted 5h ago',
+        profileImage: 'https://picsum.photos/1000/1000'
+    }
+}
+{
+            url: "{{ url_for('static',filename=img) }}",
+            seeMore:  ({ close }) => (
+        React.createElement("div", {style: {width: '100%',height: '100%'}}, "Hello")
+        ),
+        header: {
+            heading: '{{ ancla[2] | title }}',
+            /*subheading: 'Posted 5h ago',*/
+//            profileImage: 'https://picsum.photos/1000/1000'
+//        }
+//    }
