--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -25,15 +25,9 @@
 {% macro a_card(img,title,gancho,link) %}
     <div class="card">
       <div class="card-image waves-effect waves-block waves-light">
-        <img class="activator" src="{{ img }}">
       </div>
       <div class="card-content">
-        <span class="card-title activator grey-text text-darken-4">{{ title }}<i class="material-icons right">more_vert</i></span>
-        <p><a href="#">{{ link }}</a></p>
-      </div>
-      <div class="card-reveal">
-        <span class="card-title grey-text text-darken-4">{{ title }}<i class="material-icons right">close</i></span>
-        <p>{{ gancho }}</p>
+        <h6><a style="color: black;font-weight: bold;" href="{{ link }}">{{ title }}</a></h6>
       </div>
     </div>
 {% endmacro %}
