--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,4 +1,18 @@
 {% include "header.html" %}
+<!--@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@-->
+<nav>
+  <div class="nav-wrapper">
+    <a href="/" class="center brand-logo"><i class="material-icons">nature_people</i>Pipol</a>
+    <ul class="right">
+       <!--<li><a href="badges.html"><i class="material-icons">view_module</i></a></li>
+          <li><a href="collapsible.html"><i class="material-icons">refresh</i></a></li>
+          <li><a href="mobile.html"><i class="material-icons">more_vert</i></a></li>-->
+      <li><a href="search"><i class="material-icons">search</i></a></li>
+    </ul>
+  </div>
+</nav>
+<!--@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@-->
+
   <div class="row">
     <div id="columns">
       {% import 'macros.html' as macros %}
