--- a/app/templates/mobile/content.html
+++ b/app/templates/mobile/content.html
@@ -1,4 +1,21 @@
+
 {% include "mobile/header_m.html" %}
+<nav>
+    <div class="nav-wrapper">
+      <ul id="nav-mobile" class="left">
+        <li><i onclick="history.back()" class="material-icons">arrow_back</i></li>
+      </ul>
+      <a href="/" class="center brand-logo"><i class="material-icons">nature_people</i>Pipol</a>
+      <ul class="right">
+         <!--<li><a href="badges.html"><i class="material-icons">view_module</i></a></li>
+            <li><a href="collapsible.html"><i class="material-icons">refresh</i></a></li>
+            <li><a href="mobile.html"><i class="material-icons">more_vert</i></a></li>-->
+        <li><a href="/search"><i class="material-icons">search</i></a></li>
+      </ul>
+    </div>
+</nav>
+
+
     <div class="container">
         <div>
             <h1 class="center-align">{{ title }}</h1>
@@ -15,7 +32,7 @@
     </div>
     <div class="container">
         {% for cnt in content %}
-            <p>{{ cnt | safe }}</p>
+            <p style="font-size: 22px;color: black;">{{ cnt | safe }}</p>
         {% endfor %}
     </div>
     <div class="container">
@@ -64,4 +81,4 @@
 
     
 {% include "navbar.html" %}
-{% include "mobile/footer_m.html" %}
+{% include "footer.html" %}
