--- a/app/templates/content.html
+++ b/app/templates/content.html
@@ -37,7 +37,7 @@
         </div>
         <div class="container">
             <div class="center-aling">
-                {% for cat in categoria %}<span class="new badge" data-badge-caption="{{ cat }}">seccion</span>{% endfor %}
+                {% for cat in categoria %}<a href="{{url_for('show_cat',name=cat)}}"><span class="new badge" data-badge-caption="{{ cat }}">seccion</span></a>{% endfor %}
             </div>
         </div>
         <div class="container">
