madre mia aun paso de hacer deploy flata la vista de search

--- a/app/templates/footer.html
+++ b/app/templates/footer.html
@@ -2,16 +2,19 @@
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
-          <h5 class="white-text">Footer Content</h5>
-          <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+          <h5 class="white-text">Pipol sos voj y yo ... 🌚</h5>
+          <p class="grey-text text-lighten-4">Pipol esta en su primera version , pronto sera un medio donde nostros los que vivimos las noticias
+            la compartamos y no un 🧟 . Estamos pensando en rebautizarlo a OpenNews y descentralizado y proximamente 
+            liberaremos el codigo fuente(ya esta listo pero la documentacion esta del carajo)
+          </p>
         </div>
         <div class="col l4 offset-l2 s12">
-          <h5 class="white-text">Links</h5>
+          <h5 class="white-text">Secciones</h5>
           <ul>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+            <li><a class="grey-text text-lighten-3" href="/show/Política">Política 💩</a></li>
+            <li><a class="grey-text text-lighten-3" href="/show/Economía">Economía 💵</a></li>
+            <li><a class="grey-text text-lighten-3" href="/show/Opinión">Opinión 🤔</a></li>
+            <li><a class="grey-text text-lighten-3" href="/show/Tecnología">Tecnología 📺</a></li>
           </ul>
         </div>
       </div>
@@ -19,7 +22,7 @@
     <div class="footer-copyright">
       <div class="container">
       © 2020 Copyright
-      <a class="grey-text text-lighten-4 right" href="#">Sitemap</a>
+      <a class="grey-text text-lighten-4 right" href="/sitemap.xml">Sitemap</a>
       </div>
     </div>
 </footer>
