--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,17 +1,19 @@
 <ul id="slide-out" class="sidenav">
     <li><div class="user-view">
-      <div class="background">
-        <img src="images/office.jpg">
-      </div>
-      <a href="#user"><img class="circle" src="images/yuna.jpg"></a>
-      <a href="#name"><span class="white-text name">John Doe</span></a>
-      <a href="#email"><span class="white-text email">jdandturk@gmail.com</span></a>
+      <!--<div class="background">
+        <img src="{{ url_for('static',filename='pipol.png') }}">
+      </div>-->
+      <a href="#user"><img class="circle" src="{{ url_for('static',filename='pipol.png') }}"></a>
+      <!--<a href="#name"><span class="white-text name">John Doe</span></a>
+      <a href="#email"><span class="white-text email">jdandturk@gmail.com</span></a>-->
     </div></li>
-    <li><a href="#!"><i class="material-icons">cloud</i>First Link With Icon</a></li>
-    <li><a href="#!">Second Link</a></li>
+    <!--<li><a href="#!"><i class="material-icons">cloud</i>First Link With Icon</a></li>-->
+    {% for i in g.categorias %}
+      <li><a href="{{ url_for('show_cat',name=i) }}">{{ i }}</a></li>
+    {% endfor %}
     <li><div class="divider"></div></li>
-    <li><a class="subheader">Subheader</a></li>
-    <li><a class="waves-effect" href="#!">Third Link With Waves</a></li>
+    <li><a class="subheader">Info</a></li>
+    <li><a class="waves-effect" href="#!">🇧🇴 Pipol hecha 💚 para voj</a></li>
     
   </ul>
   <div class="fixed-action-btn">
