Hasta este punto todo funcaaaaasssssssa

--- a/app/templates/footer.html
+++ b/app/templates/footer.html
@@ -2,7 +2,7 @@
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
-          <h5 class="white-text">Pipol sos voj y yo ... 🌚</h5>
+          <h5 class="white-text">Pipol la contruyes tú 🔥</h5>
           <p class="grey-text text-lighten-4">Pipol esta en su primera version , pronto sera un medio donde nostros los que vivimos las noticias
             la compartamos y no un 🧟 . Estamos pensando en rebautizarlo a OpenNews y descentralizado y proximamente 
             liberaremos el codigo fuente(ya esta listo pero la documentacion esta del carajo)
